@@ -8,7 +8,8 @@ install:
 	python setup.py install
 
 test:
-	python -m tests.test_rpqueue
+	python2.6 -m tests.test_rpqueue
+	python2.7 -m tests.test_rpqueue
 
 upload:
 	python setup.py sdist upload
