@@ -10,12 +10,12 @@ except IOError:
 
 setup(
     name='rpqueue',
-    version='0.23',
+    version='0.24.0',
     description='Use Redis as a priority-enabled and time-based task queue.',
     author='Josiah Carlson',
     author_email='josiah.carlson@gmail.com',
     url='https://github.com/josiahcarlson/rpqueue',
-    packages=['rpqueue', 'tests'],
+    packages=['rpqueue'],
     classifiers=[
         'Development Status :: 5 - Production/Stable',
         'License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)',
